Feat[DEV-04]: Listing des films + refactorisation basique des templates

--- a/templates/Page/Movie/create.html.twig
+++ b/templates/Page/Movie/create.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1 style="color: red">Ceci est une page temporaire !! A changer !</h1>
+    {% include 'Widget/REPLACEME.html.twig' %}
 
     {{ form_start(form) }}
     {{ form_rest(form) }}
