Feat[DEV-06]: Suppression des films + nouvelle action dans le widget des actions

--- a/templates/Widget/Movie/actions.html.twig
+++ b/templates/Widget/Movie/actions.html.twig
@@ -1,3 +1,4 @@
 <td>
     <a href="{{ path('app_movie_update', {'id': movie.id}) }}">Modifier</a>
+    <a href="{{ path('app_movie_remove', {'id': movie.id}) }}">Supprimer</a>
 </td>
