Feat[DEV-01]: commande fonctionnel + reste debug username=null

--- a/templates/Pages/home.html.twig
+++ b/templates/Pages/home.html.twig
@@ -1,10 +1,10 @@
 {% extends 'Layout/base.html.twig' %}
 
 {% block title %}
-
+Bienvenue {{ username }}
 {% endblock title%}
 {% block body %}
-
+<p>Vous etes sur la page d'acceuil</p>
 {% endblock body%}
 
 
