Feat[FRT-00]: Initialisation header and base

--- a/templates/Page/Movie/movies.html.twig
+++ b/templates/Page/Movie/movies.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    {% include 'Widget/REPLACEME.html.twig' %}
+    {% include 'Widget/header.html.twig' %}
 
     <table>
         <thead>
