--- a/templates/Page/Movie/update.html.twig
+++ b/templates/Page/Movie/update.html.twig
@@ -1,7 +1,8 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    {% include 'Widget/REPLACEME.html.twig' %}
+
+    {% include 'Widget/header.html.twig' %}
 
     {{ form_start(form) }}
     {{ form_rest(form) }}
