Feat[FRT-00]: Refactorisation de l'arborescence

--- a/templates/Page/Movie/update.html.twig
+++ b/templates/Page/Movie/update.html.twig
@@ -1,9 +1,6 @@
-{% extends 'base.html.twig' %}
+{% extends 'Layout/base.html.twig' %}
 
 {% block body %}
-
-    {% include 'Widget/header.html.twig' %}
-
     {{ form_start(form) }}
     {{ form_rest(form) }}
     <button>Valider</button>
