--- a/templates/Page/Movie/movies.html.twig
+++ b/templates/Page/Movie/movies.html.twig
@@ -1,8 +1,6 @@
-{% extends 'base.html.twig' %}
+{% extends 'Layout/base.html.twig' %}
 
 {% block body %}
-    {% include 'Widget/header.html.twig' %}
-
     <table>
         <thead>
             <tr>
