--- a/templates/Pages/login.html.twig
+++ b/templates/Pages/login.html.twig
@@ -5,19 +5,16 @@
 
 {% block body %}
 
+    {% if error %}
+        <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+    {% endif %}
+
     <h1>Connectez-vous</h1>
 
-{#    {{ form_start(form, { 'action': path('app_login') }) }}#}
-{#    {{ form_row(form._email) }}#}
-{#    {{ form_row(form._username) }}#}
-{#    {{ form_row(form._password) }}#}
-{#    {{ form_row(form._submit) }}#}
-{#    {{ form_end(form) }}#}
+    {{ form_start(form) }}
+    {{ form_row(form._username) }}
+    {{ form_row(form._password) }}
+    {{ form_row(form._submit) }}
+    {{ form_end(form) }}
 
-    <form method="post">
-        <input type="email" name="_email" id="email" placeholder="email">
-        <input type="text" name="_username" id="username" placeholder="username">
-        <input type="password" name="_password" id="password" placeholder="password">
-        <button>Connexion</button>
-    </form>
 {% endblock body %}
