feat[FRT-05]: Style update page and file input

--- a/templates/Page/Movie/movies.html.twig
+++ b/templates/Page/Movie/movies.html.twig
@@ -1,6 +1,7 @@
 {% extends 'Layout/base.html.twig' %}
 
 {% block body %}
+    {% include 'Widget/header.html.twig' %}
     <table>
         <thead>
             <tr>
