--- a/public/css/form.css
+++ b/public/css/form.css
@@ -43,7 +43,8 @@
 button {
     display: block;
     margin: 16px auto;
-    padding: 10px calc(0.65 * 220px);
+    padding: 10px 20px;
+    width: calc(0.7 * 440px);
     border: none;
     border-radius: 8px;
     font-family: var(--font-family), sans-serif;
@@ -76,7 +77,7 @@ button:hover {
     opacity: 1;
 }
 
-.form-control input, .form-control textarea {
+.form-control input:not([type="file"]), .form-control textarea {
     width: calc(440px * 0.7);
     height: 32px;
     border: none;
@@ -99,3 +100,40 @@ button:hover {
     resize: none;
     font-size: 12px;
 }
+
+.form-control input[type="file"] {
+    width: calc(440px * 0.7);
+    padding: 8px;
+    border: none;
+    border-radius: 8px;
+    background: var(--input-color);
+    color: var(--primary-color);
+    font-family: var(--font-family);
+    font-weight: var(--font-weight);
+    cursor: pointer;
+    margin-top: 8px;
+    text-align: center;
+    overflow: hidden;
+}
+
+.form-control input[type="file"]::file-selector-button {
+    padding: 8px 12px;
+    border: 1px solid var(--primary-color);
+    background: none;
+    color: var(--primary-color);
+    border-radius: 6px;
+    cursor: pointer;
+    transition: 0.3s ease-in-out;
+    font-weight: 600;
+}
+
+.form-control input[type="file"]::file-selector-button:hover {
+    background-color: #535353;
+}
+
+.form-control input[type="file"]:focus {
+    outline: none;
+    box-shadow: 0 0 0 2px var(--primary-color);
+}
+
+
