--- a/templates/Page/Movie/update.html.twig
+++ b/templates/Page/Movie/update.html.twig
@@ -1,9 +1,24 @@
 {% extends 'Layout/base.html.twig' %}
 
-{% block body %}
-    {{ form_start(form) }}
-    {{ form_rest(form) }}
-    <button>Valider</button>
-    {{ form_end(form) }}
+{% block stylesheets %}
+    <link rel="stylesheet" href="{{ asset('css/form.css') }}">
 {% endblock %}
 
+{% block body %}
+    {% include 'Widget/header.html.twig' %}
+
+    <div class="form-container">
+        <div class="info">
+            <div class="icon"><i class="uil uil-sync"></i></div>
+            <h2>Mettre à jour un film</h2>
+            <p>Mettre à jour, partage ton histoire et fais découvrir ton univers.</p>
+        </div>
+
+        <div class="form-control">
+            {{ form_start(form) }}
+            {{ form_rest(form) }}
+            <button type="submit">Mettre à jour</button>
+            {{ form_end(form) }}
+        </div>
+    </div>
+{% endblock body %}
