feat[DEV-18]: Ajout d'un film dans une playlist

--- a/templates/Page/Playlist/playlist.html.twig
+++ b/templates/Page/Playlist/playlist.html.twig
@@ -7,6 +7,12 @@
 
     {% for playlist in playlists %}
         <h2>{{ playlist.name }}</h2>
+        <ul>
+            {% for movie in playlist.movies %}
+                <li>{{ movie.title }}
+                </li>
+            {% endfor %}
+        </ul>
         <a href="{{ path('app_playlist_remove', { id: playlist.id }) }}">Supprimer</a>
     {% endfor %}
 {% endblock %}
