feat[DEV-18]: Fast edit

--- a/templates/Page/Movie/add_to_playlist.html.twig
+++ b/templates/Page/Movie/add_to_playlist.html.twig
@@ -5,6 +5,8 @@
     <h1>Ajouter un film à une playlist</h1>
 
     {{ form_start(form) }}
+    {{ form_rest(form) }}
+    <button type="submit">Ajouter à la playlist</button>
     {{ form_end(form) }}
 
 {% endblock %}
