--- a/templates/Page/Playlist/playlist.html.twig
+++ b/templates/Page/Playlist/playlist.html.twig
@@ -10,6 +10,7 @@
         <ul>
             {% for movie in playlist.movies %}
                 <li>{{ movie.title }}
+                    <a href="{{ path('app_playlist_remove_movie', { id: playlist.id, movieId: movie.id }) }}">Retirer</a>
                 </li>
             {% endfor %}
         </ul>
