--- a/templates/Page/Authentication/login.html.twig
+++ b/templates/Page/Authentication/login.html.twig
@@ -3,19 +3,114 @@
 
 {% block title %}Login{% endblock title %}
 
+{% block stylesheets %}
+    <link rel="stylesheet" href="{{ asset('css/form.css') }}">
+{% endblock %}
+
 {% block body %}
 
     {% if error %}
         <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
     {% endif %}
 
-    <h1>Connectez-vous</h1>
+    <div class="form-container">
+        <div class="info">
+            <div class="icon"><i class="uil uil-sign-in-alt"></i></div>
+            <h2>Connectez-vous</h2>
+            <p>Connecte-toi, accède à ton espace et commence à explorer ton monde créatif.</p>
+        </div>
 
-    {{ form_start(form) }}
-    {{ form_row(form._username) }}
-    {{ form_row(form._password) }}
-    {{ form_row(form._submit) }}
-    {{ form_end(form) }}
-    
+        <div class="form-control">
+
+            {{ form_start(form) }}
+            <div class="icon-input">
+                <i class="uil uil-envelope"></i>
+                {{ form_row(form._username) }}
+            </div>
+            <div class="icon-input">
+                <i class="uil uil-lock"></i>
+                {{ form_row(form._password) }}
+            </div>
+            {{ form_row(form._submit) }}
+            <div class="remember_me">
+                {{ form_row(form.remember_me) }}
+                <label for="{{ form.remember_me.vars.id }}" style="display: block;">Se souvenir de moi</label>
+            </div>
+            {{ form_end(form) }}
+        </div>
+    </div>
+
+    <style>
+        .form-container {
+            margin: 100px auto;
+        }
+
+        .form-control input:not([type="file"]):not([type="checkbox"]) {
+            padding-left: 34px;
+        }
+
+        .form-control  .remember_me {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: flex-end;
+        }
+
+
+        .form-control input[type='checkbox'] {
+            appearance: none;
+            width: 16px;
+            height: 16px;
+            background: var(--input-color);
+            cursor: pointer;
+            border: 2px solid var(--bg-color);
+            border-radius: 3px;
+            margin-top:5px;
+            outline: none;
+            box-shadow: none;
+            position: relative;
+            transition: .3s ease-in-out;
+        }
+
+        .form-control input[type='checkbox']:checked {
+            background: var(--primary-color);
+        }
+
+        .form-control input[type='checkbox']:checked::after {
+            content: '\2713';
+            position: absolute;
+            top: -2px;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            color: var(--bg-color);  /* Couleur de la flèche */
+            font-size: 12px; /* Taille de la flèche */
+            text-align: center;
+            line-height: 16px; /* Centrer la flèche verticalement */
+        }
+
+        .form-control .remember_me label {
+            margin-left: 8px;
+            color: var(--primary-color);
+            font-size: 12px;
+        }
+
+        .icon {
+            transform: rotate(180deg);
+        }
+
+        .icon-input {
+            color: var(--primary-color);
+            position: relative;
+        }
+
+        .icon-input i {
+            position: absolute;
+            left: 8px;
+            top: calc(50% - 8px);
+            font-size: 20px;
+        }
+
+    </style>
 
 {% endblock body %}
