--- a/public/css/form.css
+++ b/public/css/form.css
@@ -136,4 +136,42 @@ button:hover {
     box-shadow: 0 0 0 2px var(--primary-color);
 }
 
+.form-control .selection {
+    position: relative;
+    width: calc(440px * 0.7);
+}
 
+.form-control select {
+    width: 100%;
+    height: 32px;
+    border: none;
+    border-radius: 8px;
+    background: var(--input-color);
+    color: var(--primary-color);
+    padding: 8px;
+    font-family: var(--font-family), sans-serif;
+    font-weight: var(--font-weight);
+    margin-top: 8px;
+    text-align: left;
+    appearance: none;
+}
+
+.form-control .selection::after {
+    content: '\25BC';
+    position: absolute;
+    top: 50%;
+    transform: translateY(-40%);
+    right: 12px;
+    color: var(--primary-color);
+    font-size: 14px;
+}
+
+.form-control select:focus {
+    outline: none;
+    box-shadow: 0 0 0 2px var(--primary-color);
+}
+
+.form-control select option {
+    background: var(--input-color);
+    color: var(--primary-color);
+}
