--- a/templates/Page/Movie/create.html.twig
+++ b/templates/Page/Movie/create.html.twig
@@ -16,7 +16,17 @@
 
         <div class="form-control">
             {{ form_start(form) }}
-            {{ form_rest(form) }}
+            {{ form_row(form.title) }}
+            {{ form_row(form.description) }}
+            {{ form_row(form.releaseDate) }}
+            {{ form_row(form.rating) }}
+
+            <div class="selection">
+                {{ form_row(form.category) }}
+            </div>
+
+            {{ form_row(form.file) }}
+
             <button type="submit">Créer</button>
             {{ form_end(form) }}
         </div>
