--- a/templates/Widget/Movie/actions.html.twig
+++ b/templates/Widget/Movie/actions.html.twig
@@ -1,5 +1,5 @@
 <td>
-    <a href="{{ path('app_movie_update', {'id': movie.id}) }}">Modifier</a>
-    <a href="{{ path('app_movie_remove', {'id': movie.id}) }}">Supprimer</a>
-    <a href="{{ path('app_movie_add_to_playlist', { id: movie.id }) }}">Ajouter à une playlist</a>
+    <a class="button edit" href="{{ path('app_movie_update', {'id': movie.id}) }}">Modifier</a>
+    <a class="button delete" href="{{ path('app_movie_remove', {'id': movie.id}) }}">Supprimer</a>
+    <a class="button" href="{{ path('app_movie_add_to_playlist', { id: movie.id }) }}">Ajouter à une playlist</a>
 </td>
