feat[FRT-06]: Button change

--- a/templates/Page/Movie/movies.html.twig
+++ b/templates/Page/Movie/movies.html.twig
@@ -27,6 +27,6 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_movie_create') }}">Créer</a>
+    <a class="button" href="{{ path('app_movie_create') }}">Créer</a>
 {% endblock %}
 
