feat[FRT-02]: Remember me style

--- a/templates/Page/Authentication/login.html.twig
+++ b/templates/Page/Authentication/login.html.twig
@@ -41,6 +41,7 @@
     </div>
 
     <style>
+        /*FRT 02 : Style pour le remember me*/
         .form-container {
             margin: 100px auto;
         }
