--- a/public/css/base.css
+++ b/public/css/base.css
@@ -34,7 +34,7 @@ body {
     padding: 0;
     display: flex;
     flex-direction: row;
-    align-items: center;
+    align-items: flex-start;
 }
 
 header {
@@ -152,4 +152,76 @@ header nav ul li a span {
 
 .button.delete:hover {
     background: rgba(254, 92, 92, 0.22);
+}
+
+.manage {
+    margin: calc(5vh + 12px) 0 0 5vh;
+    width: 70%;
+    max-width: 1280px;
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+    background-color: var(--panel-color);
+    color: var(--text-color);
+    border-radius: 12px;
+    overflow: hidden;
+    font-size: var(--font-size);
+    margin-top: 16px;
+}
+
+table thead {
+    background-color: var(--primary-color);
+}
+
+table thead th {
+    padding: 12px 15px;
+    font-weight: 600;
+    text-align: left;
+    color: var(--bg-color);
+}
+
+table thead th:first-child {
+    border-top-left-radius: 12px;
+}
+
+table thead th:last-child {
+    border-top-right-radius: 12px;
+}
+
+/* Styles pour le corps de la table */
+table tbody tr {
+    transition: background-color 0.3s ease;
+}
+
+table tbody tr:nth-child(even) {
+    background-color: var(--input-color);
+}
+
+table tbody tr:hover {
+    background-color: rgba(92, 254, 189, 0.08);
+}
+
+/* Styles pour les cellules */
+table tbody td {
+    padding: 18px 15px;
+    max-width: 250px;
+    font-size: 12px;
+}
+
+/* Style pour les actions */
+.actions {
+    display: flex;
+    gap: 8px;
+}
+
+.no-data {
+    display: inline-block;
+    width: 100%;
+    text-align: center;
+    color: var(--text-color);
+    padding: 20px;
+    font-weight: 500;
+    font-size: 18px;
 }
