Feat[DEV-14]: Base configuration pour reinitialisation de mdp + ajout 1er form + lien dans login

--- a/templates/Page/Authentication/login.html.twig
+++ b/templates/Page/Authentication/login.html.twig
@@ -16,6 +16,7 @@
     {{ form_row(form._password) }}
     {{ form_row(form._submit) }}
     {{ form_end(form) }}
-    
+
+    <p><a href="{{ path('app_forgottenpassword') }}">Mot de passe oublié</a></p>
 
 {% endblock body %}
