--- a/templates/Page/Playlist/playlist.html.twig
+++ b/templates/Page/Playlist/playlist.html.twig
@@ -2,18 +2,44 @@
 
 {% block body %}
     {% include 'Widget/header.html.twig' %}
-    <h1>Mes playlists</h1>
-    <a href="{{ path('app_playlist_create') }}">Créer une playlist</a>
 
-    {% for playlist in playlists %}
-        <h2>{{ playlist.name }}</h2>
-        <ul>
-            {% for movie in playlist.movies %}
-                <li>{{ movie.title }}
-                    <a href="{{ path('app_playlist_remove_movie', { id: playlist.id, movieId: movie.id }) }}">Retirer</a>
-                </li>
+    <div class="manage">
+        <h1>Mes playlists</h1>
+
+        <a class="button" href="{{ path('app_playlist_create') }}">Créer une playlist</a>
+
+        <table>
+            <thead>
+            <tr>
+                <th>Nom de la playlist</th>
+                <th>Films</th>
+                <th>Actions</th>
+            </tr>
+            </thead>
+            <tbody>
+            {% for playlist in playlists %}
+                <tr>
+                    <td>{{ playlist.name }}</td>
+                    <td>
+                        <ul>
+                            {% for movie in playlist.movies %}
+                                <li>
+                                    {{ movie.title }}
+                                    <a class="button delete" href="{{ path('app_playlist_remove_movie', { id: playlist.id, movieId: movie.id }) }}">Retirer</a>
+                                </li>
+                            {% endfor %}
+                        </ul>
+                    </td>
+                    <td>
+                        {% include 'Widget/Playlist/actions.html.twig' with {'playlist': playlist} %}
+                    </td>
+                </tr>
+            {% else %}
+                <tr>
+                    <td colspan="3" class="no-data">Aucune playlist disponible</td>
+                </tr>
             {% endfor %}
-        </ul>
-        {% include 'Widget/Playlist/actions.html.twig' with {'playlist': playlist} %}
-    {% endfor %}
+            </tbody>
+        </table>
+    </div>
 {% endblock %}
