feat[FRT-17]: Delete button playlist

--- a/templates/Widget/Playlist/actions.html.twig
+++ b/templates/Widget/Playlist/actions.html.twig
@@ -1,4 +1,4 @@
 <td>
-    <a href="{{ path('app_playlist_remove', { id: playlist.id }) }}">Supprimer</a>
+    <a class="button delete" href="{{ path('app_playlist_remove', { id: playlist.id }) }}">Supprimer</a>
     <a href="{{ path('app_playlist_update', { id: playlist.id }) }}">Modifier</a>
 </td>
