feat[FRT-08]: Style of create form category

--- a/public/css/form.css
+++ b/public/css/form.css
@@ -4,7 +4,7 @@
     background: var(--panel-color);
     padding: 16px;
     border-radius: 36px;
-    margin: 0 auto;
+    margin: 5vh auto;
 }
 
 .info {
