--- a/templates/Widget/header.html.twig
+++ b/templates/Widget/header.html.twig
@@ -16,7 +16,7 @@
                     <i class="uil uil-clapper-board"></i><span>Manager</span></a> <!-- Visible seulement par les administrateurs -->
             </li>
             <li><a href="{{ path('app_category_list')}}" class="{% if app.request.attributes.get('_route') == 'app_category_list' %}active{% endif %}">
-                    <i class="uil uil-clapper-board"></i><span>Catégorie</span></a> <!-- Visible seulement par les administrateurs -->
+                    <i class="uil uil-inbox"></i><span>Catégorie</span></a> <!-- Visible seulement par les administrateurs -->
             </li>
         </ul>
 
