feat[FRT-07]: form update category

--- a/templates/Page/Category/create.html.twig
+++ b/templates/Page/Category/create.html.twig
@@ -16,7 +16,7 @@
         <div class="form-control">
             {{ form_start(form) }}
             {{ form_rest(form) }}
-            <button>Create</button>
+            <button>Créer</button>
             {{ form_end(form) }}
         </div>
     </div>
