--- a/public/css/form.css
+++ b/public/css/form.css
@@ -186,3 +186,7 @@ button:hover {
     color: var(--primary-color);
     font-size: 12px;
 }
+
+.form-control a {
+    text-decoration: underline;
+}
