--- a/templates/Page/Authentication/signup.html.twig
+++ b/templates/Page/Authentication/signup.html.twig
@@ -1,7 +1,7 @@
 
 {% extends 'Layout/base.html.twig' %}
 
-{% block title %}Login{% endblock title %}
+{% block title %}Incscription{% endblock title %}
 
 {% block stylesheets %}
     <link rel="stylesheet" href="{{ asset('css/form.css') }}">
@@ -9,39 +9,33 @@
 
 {% block body %}
 
-    {% if error %}
-        <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-    {% endif %}
-
     <div class="form-container">
         <div class="info">
             <div class="icon"><i class="uil uil-sign-in-alt"></i></div>
-            <h2>Connectez-vous</h2>
-            <p>Connecte-toi, accède à ton espace et commence à explorer ton monde créatif.</p>
+            <h2>Inscrivez-vous</h2>
+            <p>Inscris-toi, accède à ton espace et commence à explorer ton monde créatif.</p>
         </div>
 
         <div class="form-control">
 
             {{ form_start(form) }}
             <div class="icon-input">
-                <i class="uil uil-envelope"></i>
+                <i class="uil uil-user"></i>
                 {{ form_row(form._username) }}
+            </div>
+            <div class="icon-input">
+                <i class="uil uil-envelope"></i>
+                {{ form_row(form._email) }}
             </div>
             <div class="icon-input">
                 <i class="uil uil-lock"></i>
                 {{ form_row(form._password) }}
             </div>
             <div class="password">
-                <div class="remember_me">
-                    {{ form_row(form.remember_me) }}
-                    <label for="{{ form.remember_me.vars.id }}" style="display: block;">Se souvenir de moi</label>
-                </div>
-                <a href="{{ path('app_forgottenpassword') }}">Mot de passe oublié ?</a>
-
+                <a href="{{ path('app_login') }}">Déjà un compte ?</a>
             </div>
 
-            {{ form_row(form._submit) }}
-            <a href="{{ path('app_signup') }}">Pas de compte ?</a>
+            <button type="submit">Créer</button>
 
             {{ form_end(form) }}
         </div>
@@ -104,13 +98,6 @@
             left: 8px;
             top: calc(50% - 8px);
             font-size: 20px;
-        }
-
-        .password {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            margin-top: 4px;
         }
 
     </style>
