--- a/templates/Widget/header.html.twig
+++ b/templates/Widget/header.html.twig
@@ -14,17 +14,19 @@
             </li>
         </ul>
 
-        <ul>
-            <li><a href="{{ path('app_movies')}}" class="{% if app.request.attributes.get('_route') == 'app_movies' %}active{% endif %}">
-                    <i class="uil uil-clapper-board"></i><span>Manager</span></a> <!-- Visible seulement par les administrateurs -->
-            </li>
-            <li><a href="{{ path('app_category_list')}}" class="{% if app.request.attributes.get('_route') == 'app_category_list' %}active{% endif %}">
-                    <i class="uil uil-inbox"></i><span>Catégorie</span></a> <!-- Visible seulement par les administrateurs -->
-            </li>
-            <li><a href="{{ path('app_user_list')}}" class="{% if app.request.attributes.get('_route') == 'app_user_list' %}active{% endif %}">
-                    <i class="uil uil-users-alt"></i><span>Utilisateurs</span></a> <!-- Visible seulement par les administrateurs -->
-            </li>
-        </ul>
+        {% if is_granted('ROLE_ADMIN') %}
+            <ul> <!-- Visible seulement par les administrateurs -->
+                <li><a href="{{ path('app_movies')}}" class="{% if app.request.attributes.get('_route') == 'app_movies' %}active{% endif %}">
+                        <i class="uil uil-clapper-board"></i><span>Manager</span></a>
+                </li>
+                <li><a href="{{ path('app_category_list')}}" class="{% if app.request.attributes.get('_route') == 'app_category_list' %}active{% endif %}">
+                        <i class="uil uil-inbox"></i><span>Catégorie</span></a>
+                </li>
+                <li><a href="{{ path('app_user_list')}}" class="{% if app.request.attributes.get('_route') == 'app_user_list' %}active{% endif %}">
+                        <i class="uil uil-users-alt"></i><span>Utilisateurs</span></a>
+                </li>
+            </ul>
+        {% endif %}
 
         <ul>
             <li><a href="{{ path('app_profile_update')}}" class="{% if app.request.attributes.get('_route') == 'app_profile_update' %}active{% endif %}">
