--- a/templates/Page/User/list.html.twig
+++ b/templates/Page/User/list.html.twig
@@ -4,26 +4,28 @@
     {% include 'Widget/header.html.twig' %}
     <div class="manage">
         <a class="button" href="{{ path('app_user_create') }}">Créer</a>
-        <table>
-            <thead>
-            <tr>
-                <th>Nom de l'utilisateur</th>
-                <th>Email</th>
-                <th>Actions</th>
-            </tr>
-            </thead>
-            <tbody>
-            {% for user in users %}
+        <div class="table-container">
+            <table>
+                <thead>
                 <tr>
-                    <td>{{ user.username }}</td>
-                    <td>{{ user.email }}</td>
-                    {% include 'Widget/User/actions.html.twig' with {'user': user} %}
+                    <th>Nom de l'utilisateur</th>
+                    <th>Email</th>
+                    <th>Actions</th>
                 </tr>
-            {% else %}
-                <span>Aucune donnée</span>
-            {% endfor %}
-            </tbody>
-        </table>
+                </thead>
+                <tbody>
+                {% for user in users %}
+                    <tr>
+                        <td>{{ user.username }}</td>
+                        <td>{{ user.email }}</td>
+                        {% include 'Widget/User/actions.html.twig' with {'user': user} %}
+                    </tr>
+                {% else %}
+                    <span>Aucune donnée</span>
+                {% endfor %}
+                </tbody>
+            </table>
+        </div>
     </div>
 {% endblock %}
 
