--- a/templates/Widget/header.html.twig
+++ b/templates/Widget/header.html.twig
@@ -1,3 +1,5 @@
+<input type="checkbox" id="checkbox-header" hidden>
+<label id="label-header" for="checkbox-header"><i class="uil uil-bars"></i></label>
 <header>
     <div class="logo">
         <img src="{{ asset('images/logo.png') }}" alt="Logo">
