feat[FRT-24]: Logo name page

--- a/templates/Page/Authentication/login.html.twig
+++ b/templates/Page/Authentication/login.html.twig
@@ -1,7 +1,7 @@
 
 {% extends 'Layout/base.html.twig' %}
 
-{% block title %}Login{% endblock title %}
+{% block title %}JMLHub • Se connecter{% endblock title %}
 
 {% block stylesheets %}
     <link rel="stylesheet" href="{{ asset('css/form.css') }}">
