--- a/templates/Page/Authentication/signup.html.twig
+++ b/templates/Page/Authentication/signup.html.twig
@@ -1,7 +1,7 @@
 
 {% extends 'Layout/base.html.twig' %}
 
-{% block title %}Incscription{% endblock title %}
+{% block title %}JMLHub • Inscription{% endblock title %}
 
 {% block stylesheets %}
     <link rel="stylesheet" href="{{ asset('css/form.css') }}">
