--- a/templates/Page/Security/resetPasswordRequest.html.twig
+++ b/templates/Page/Security/resetPasswordRequest.html.twig
@@ -1,6 +1,6 @@
 {% extends 'Layout/base.html.twig' %}
 
-{% block title %}Reset Password{% endblock title %}
+{% block title %}JMLHub • Réinitialisation de mot de passe{% endblock title %}
 
 {% block body %}
 
