--- a/templates/Page/home.html.twig
+++ b/templates/Page/home.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-    Bienvenue {{ username }}
+    JMLHub • {{ username }}
 {% endblock title%}
 
 {% block stylesheets %}
