--- a/templates/Page/Security/reset_password.html.twig
+++ b/templates/Page/Security/reset_password.html.twig
@@ -1,6 +1,6 @@
 {% extends 'Layout/base.html.twig' %}
 
-{% block title %}Réinitialisation de mot de passe{% endblock %}
+{% block title %}JMLHub • Réinitialisation de mot de passe{% endblock %}
 
 {% block body %}
     <section>
