--- a/templates/Widget/header.html.twig
+++ b/templates/Widget/header.html.twig
@@ -3,7 +3,7 @@
 <header>
     <div class="logo">
         <img src="{{ asset('images/logo.png') }}" alt="Logo">
-        <span class="name">Netflix <span class="hub">Like</span></span>
+        <span class="name">JML <span class="hub">Hub</span></span>
     </div>
 
     <nav>
